--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -32,6 +32,7 @@ dependencies:
     sdk: flutter
   firebase_core: ^2.15.1
   firebase_auth: ^4.8.0
+  cloud_firestore: ^4.9.2
   get: ^4.6.5
   google_sign_in: ^6.1.4
   flutter_facebook_auth: ^6.0.1
